<resources>
    <string name="app_name">Restaurante Valdivia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_platos">Platos</string>
    <string name="menu_Cuenta">Cuenta</string>
    <string name="menu_Datos">Añadir Datos</string>
    <string name="cancel"> Cancelar</string>
    <string name="safe">guardar</string>
    <string name="name">Nombre</string>
    <string name="url_photo">Url Foto</string>
    <string name="description">Descripción</string>
    <string name="safe_ok">Modificado con existo</string>
    <string name="nombre_restaurante">Restaurante Valdivia </string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">iniciar sesión</string>
    <string name="register">registro</string>
    <string name="errorRegister">Error de autentificación</string>
    <string name="errorField">Por favor, Rellene los campos</string>
    <string name="nonAssociatedName">Nombre no Asociado</string>
    <string name="registerSucces">Éxito en el registro</string>
    <string name="userInfo">Información del usuario</string>
    <string name="changePassword"> Cambiar contraseña </string>
    <string name="logOut"> Cerrar Sesión </string>
    <string name="back"> volver </string>
</resources>