<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.aplicacionfinal.ui.platos.PlatosFragment"
        android:label="@string/menu_platos"
        tools:layout="@layout/fragment_platos" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.example.aplicacionfinal.ui.cuenta.CuentaFragment"
        android:label="@string/menu_Cuenta"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.example.aplicacionfinal.ui.datos.DatosFragment"
        android:label="@string/menu_Datos"
        tools:layout="@layout/fragment_datos" />
</navigation>